<resources>
    <string name="app_name">CalcApp2</string>
    <string name="testID">3892</string>
    
    <string name="first">First number</string>
    <string name="second">Second number</string>
    <string name="P">+</string>
    <string name="S">–</string>
    <string name="M">×</string>
    <string name="D">÷</string>
    <string name="answer">Answer</string>
    <string name="error">Input Error</string>
    <string name="dbz">Div by zero</string>
</resources>
